--- a/gpdb-doc/dita/ref_guide/ref_guide.ditamap
+++ b/gpdb-doc/dita/ref_guide/ref_guide.ditamap
@@ -220,16 +220,15 @@
 			id="guc_config" format="ditamap"/>
 		<topicref href="function-summary.xml" id="func_summary"/>
 		<topicref href="yaml_spec.xml" navtitle="Greenplum MapReduce Specification" id="yaml_spec"/>
-		<topicref href="extensions/pl_sql.xml" navtitle="Greenplum PL/pgSQL Language Extension"
-			id="pl_sql"/>
+		<topicref href="extensions/pl_sql.xml" navtitle="Greenplum PL/pgSQL Extension" id="pl_sql"/>
 		<topicref href="extensions/postGIS.xml" navtitle="Greenplum PostGIS Extension" id="postGIS"/>
 		<topicref href="extensions/pl_r.xml" navtitle="Greenplum PL/R Language Extension" id="pl_r"/>
 		<topicref href="extensions/pl_python.xml" navtitle="Greenplum PL/Python Language Extension"
 			id="pl_python"/>
 		<topicref href="extensions/pl_java.xml" navtitle="Greenplum PL/Java Language Extension"
-			  id="pl_java"/>
+			id="pl_java"/>
 		<topicref href="extensions/madlib.xml" navtitle="Greenplum MADlib Extension for Analytics"
-			  id="madlib"/>
+			id="madlib"/>
 		<topicref href="extensions/fuzzystrmatch.xml"
 			navtitle="Greenplum Fuzzy String Match Extension" id="fuzzystrmatch"/>
 		<topicref href="feature_summary.xml" navtitle="Summary of Greenplum Features"
