--- a/src/test/regress/sql/uao_ddl/README
+++ b/src/test/regress/sql/uao_ddl/README
@@ -1,6 +1,6 @@
 This directory only contains generated files created by running the
 
-	 ./pg_regress --ao-dir=uao ...
+	 ./pg_regress --ao-dir=uao_ddl/...
 
 command.
 
