--- a/gpdb-doc/dita/admin_guide/configure.ditamap
+++ b/gpdb-doc/dita/admin_guide/configure.ditamap
@@ -5,7 +5,7 @@
    <title>Configuring the Greenplum System</title>
    <topicref href="topics/g-configuring-the-greenplum-system.xml" type="topic">
       <topicref href="topics/g-about-greenplum-master-and-local-parameters.xml" type="topic"/>
-      <topicref href="topics/g-setting-configuration-parameters.xml" type="topic" chunk="to-content">
+      <topicref href="topics/g-setting-configuration-parameters.xml" type="topic">
          <topicref href="topics/g-setting-a-local-configuration-parameter.xml" type="topic"/>
          <topicref href="topics/g-setting-a-master-configuration-parameter.xml" type="topic">
             <topicref href="topics/g-setting-parameters-at-the-system-level.xml" type="topic"/>
@@ -15,22 +15,19 @@
          </topicref>
       </topicref>
       <topicref href="topics/g-viewing-server-configuration-parameter-settings.xml" type="topic"/>
-      <topicref href="topics/g-configuration-parameter-categories.xml" type="topic"
-         chunk="to-content">
-         <topicref href="topics/g-connection-and-authentication-parameters.xml" type="topic"
-            chunk="to-content">
+      <topicref href="topics/g-configuration-parameter-categories.xml" type="topic">
+         <topicref href="topics/g-connection-and-authentication-parameters.xml" type="topic">
             <topicref href="topics/g-connection-parameters.xml" type="topic"/>
             <topicref href="topics/g-security-and-authentication-parameters.xml" type="topic"/>
          </topicref>
-         <topicref href="topics/g-system-resource-consumption-parameters.xml" type="topic"
-            chunk="to-content">
+         <topicref href="topics/g-system-resource-consumption-parameters.xml" type="topic">
             <topicref href="topics/g-memory-consumption-parameters.xml" type="topic"/>
             <topicref href="topics/g-free-space-map-parameters.xml" type="topic"/>
             <topicref href="topics/g-os-resource-parameters.xml" type="topic"/>
             <topicref href="topics/g-cost-based-vacuum-delay-parameters.xml" type="topic"/>
             <topicref href="topics/g-transaction-id-management-parameters.xml" type="topic"/>
          </topicref>
-         <topicref href="topics/g-query-tuning-parameters.xml" type="topic" chunk="to-content">
+         <topicref href="topics/g-query-tuning-parameters.xml" type="topic">
             <topicref href="topics/g-pivotal-query-optimizer-parameters.xml" type="topic"/>
             <topicref href="topics/g-query-plan-operator-control-parameters.xml" type="topic"/>
             <topicref href="topics/g-query-planner-costing-parameters.xml" type="topic"/>
@@ -41,21 +38,19 @@
             <topicref href="topics/g-other-query-planner-configuration-parameters.xml" type="topic"
             />
          </topicref>
-         <topicref href="topics/g-error-reporting-and-logging-parameters.xml" type="topic"
-            chunk="to-content">
+         <topicref href="topics/g-error-reporting-and-logging-parameters.xml" type="topic">
             <topicref href="topics/g-log-rotation.xml" type="topic"/>
             <topicref href="topics/g-when-to-log.xml" type="topic"/>
             <topicref href="topics/g-what-to-log.xml" type="topic"/>
          </topicref>
-         <topicref href="topics/g-system-monitoring-parameters.xml" type="topic" chunk="to-content">
+         <topicref href="topics/g-system-monitoring-parameters.xml" type="topic">
             <topicref href="topics/g-snmp-alerts.xml" type="topic"/>
             <topicref href="topics/g-email-alerts.xml" type="topic"/>
             <topicref href="topics/g-greenplum-command-center-agent.xml" type="topic"/>
          </topicref>
          <topicref href="topics/g-runtime-statistics-collection-parameters.xml" type="topic"/>
          <topicref href="topics/g-automatic-statistics-collection-parameters.xml" type="topic"/>
-         <topicref href="topics/g-client-connection-default-parameters.xml" type="topic"
-            chunk="to-content">
+         <topicref href="topics/g-client-connection-default-parameters.xml" type="topic">
             <topicref href="topics/g-statement-behavior-parameters.xml" type="topic"/>
             <topicref href="topics/g-locale-and-formatting-parameters.xml" type="topic"/>
             <topicref href="topics/g-other-client-default-parameters.xml" type="topic"/>
@@ -66,8 +61,7 @@
          <topicref href="topics/g-append-optimized-table-parameters.xml" type="topic"/>
          <topicref href="topics/g-database-and-tablespace-filespace-parameters.xml" type="topic"/>
          <topicref href="topics/g-past-postgresql-version-compatibility-parameters.xml" type="topic"/>
-         <topicref href="topics/g-greenplum-array-configuration-parameters.xml" type="topic"
-            chunk="to-content">
+         <topicref href="topics/g-greenplum-array-configuration-parameters.xml" type="topic">
             <topicref href="topics/g-interconnect-configuration-parameters.xml" type="topic"/>
             <topicref href="topics/g-dispatch-configuration-parameters.xml" type="topic"/>
             <topicref href="topics/g-fault-operation-parameters.xml" type="topic"/>
