--- a/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
+++ b/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
@@ -2,8 +2,276 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map title="Server Configuration Parameters">
     <!--  msk - added chunk attribute to fix error in Oxygen HTML transform -->
-    <topicref href="guc_config.xml" navtitle="Server Configuration Parameters" chunk="to-content select-topic">
-        <topicref href="guc_category-list.ditamap" navtitle="Parameter Categories and List"
-            format="ditamap"/>
+    <topicref href="guc_config.xml" navtitle="Server Configuration Parameters">
+        <topicref href="guc_category-list.xml"/>
+        <topicref href="guc-list.xml">
+            <topicref href="guc-list.xml#add_missing_from"/>
+            <topicref href="guc-list.xml#application_name"/>
+            <topicref href="guc-list.xml#array_nulls"/>
+            <topicref href="guc-list.xml#authentication_timeout"/>
+            <topicref href="guc-list.xml#backslash_quote"/>
+            <topicref href="guc-list.xml#block_size"/>
+            <topicref href="guc-list.xml#bonjour_name"/>
+            <topicref href="guc-list.xml#check_function_bodies"/>
+            <topicref href="guc-list.xml#client_encoding"/>
+            <topicref href="guc-list.xml#client_min_messages"/>
+            <topicref href="guc-list.xml#cpu_index_tuple_cost"/>
+            <topicref href="guc-list.xml#cpu_operator_cost"/>
+            <topicref href="guc-list.xml#cpu_tuple_cost"/>
+            <topicref href="guc-list.xml#cursor_tuple_fraction"/>
+            <topicref href="guc-list.xml#custom_variable_classes"/>
+            <topicref href="guc-list.xml#DateStyle"/>
+            <topicref href="guc-list.xml#db_user_namespace"/>
+            <topicref href="guc-list.xml#deadlock_timeout"/>
+            <topicref href="guc-list.xml#debug_assertions"/>
+            <topicref href="guc-list.xml#debug_pretty_print"/>
+            <topicref href="guc-list.xml#debug_print_parse"/>
+            <topicref href="guc-list.xml#debug_print_plan"/>
+            <topicref href="guc-list.xml#debug_print_prelim_plan"/>
+            <topicref href="guc-list.xml#debug_print_rewritten"/>
+            <topicref href="guc-list.xml#debug_print_slice_table"/>
+            <topicref href="guc-list.xml#default_statistics_target"/>
+            <topicref href="guc-list.xml#default_tablespace"/>
+            <topicref href="guc-list.xml#default_transaction_isolation"/>
+            <topicref href="guc-list.xml#default_transaction_read_only"/>
+            <topicref href="guc-list.xml#dynamic_library_path"/>
+            <topicref href="guc-list.xml#effective_cache_size"/>
+            <topicref href="guc-list.xml#enable_bitmapscan"/>
+            <topicref href="guc-list.xml#enable_groupagg"/>
+            <topicref href="guc-list.xml#enable_hashagg"/>
+            <topicref href="guc-list.xml#enable_hashjoin"/>
+            <topicref href="guc-list.xml#enable_indexscan"/>
+            <topicref href="guc-list.xml#enable_mergejoin"/>
+            <topicref href="guc-list.xml#enable_nestloop"/>
+            <topicref href="guc-list.xml#enable_seqscan"/>
+            <topicref href="guc-list.xml#enable_sort"/>
+            <topicref href="guc-list.xml#enable_tidscan"/>
+            <topicref href="guc-list.xml#escape_string_warning"/>
+            <topicref href="guc-list.xml#explain_pretty_print"/>
+            <topicref href="guc-list.xml#extra_float_digits"/>
+            <topicref href="guc-list.xml#filerep_mirrorvalidation_during_resync"/>
+            <topicref href="guc-list.xml#from_collapse_limit"/>
+            <topicref href="guc-list.xml#gp_adjust_selectivity_for_outerjoins"/>
+            <topicref href="guc-list.xml#gp_analyze_relative_error"/>
+            <topicref href="guc-list.xml#gp_appendonly_compaction"/>
+            <topicref href="guc-list.xml#gp_appendonly_compaction_threshold"/>
+            <topicref href="guc-list.xml#gp_autostats_mode"/>
+            <topicref href="guc-list.xml#gp_autostats_mode_in_functions"/>
+            <topicref href="guc-list.xml#gp_autostats_on_change_threshold"/>
+            <topicref href="guc-list.xml#gp_backup_directIO"/>
+            <topicref href="guc-list.xml#gp_backup_directIO_read_chunk_mb"/>
+            <topicref href="guc-list.xml#gp_cached_segworkers_threshold"/>
+            <topicref href="guc-list.xml#gp_command_count"/>
+            <topicref href="guc-list.xml#gp_connectemc_mode"/>
+            <topicref href="guc-list.xml#gp_connection_send_timeout"/>
+            <topicref href="guc-list.xml#gp_connections_per_thread"/>
+            <topicref href="guc-list.xml#gp_content"/>
+            <topicref href="guc-list.xml#gp_create_table_random_default_distribution"/>
+            <topicref href="guc-list.xml#gp_dbid"/>
+            <topicref href="guc-list.xml#gp_debug_linger"/>
+            <topicref href="guc-list.xml#gp_default_storage_options"/>
+            <topicref href="guc-list.xml#gp_dynamic_partition_pruning"/>
+            <topicref href="guc-list.xml#gp_email_from"/>
+            <topicref href="guc-list.xml#gp_email_smtp_password"/>
+            <topicref href="guc-list.xml#gp_email_smtp_server"/>
+            <topicref href="guc-list.xml#gp_email_smtp_userid"/>
+            <topicref href="guc-list.xml#gp_email_to"/>
+            <topicref href="guc-list.xml#gp_enable_adaptive_nestloop"/>
+            <topicref href="guc-list.xml#gp_enable_agg_distinct"/>
+            <topicref href="guc-list.xml#gp_enable_agg_distinct_pruning"/>
+            <topicref href="guc-list.xml#gp_enable_direct_dispatch"/>
+            <topicref href="guc-list.xml#gp_enable_exchange_default_partition"/>
+            <topicref href="guc-list.xml#gp_enable_fallback_plan"/>
+            <topicref href="guc-list.xml#gp_enable_fast_sri"/>
+            <topicref href="guc-list.xml#gp_enable_gpperfmon"/>
+            <topicref href="guc-list.xml#gp_enable_groupext_distinct_gather"/>
+            <topicref href="guc-list.xml#gp_enable_groupext_distinct_pruning"/>
+            <topicref href="guc-list.xml#gp_enable_multiphase_agg"/>
+            <topicref href="guc-list.xml#gp_enable_predicate_propagation"/>
+            <topicref href="guc-list.xml#gp_enable_preunique"/>
+            <topicref href="guc-list.xml#gp_enable_relsize_collection"/>
+            <topicref href="guc-list.xml#gp_enable_sequential_window_plans"/>
+            <topicref href="guc-list.xml#gp_enable_sort_distinct"/>
+            <topicref href="guc-list.xml#gp_enable_sort_limit"/>
+            <topicref href="guc-list.xml#gp_external_enable_exec"/>
+            <topicref href="guc-list.xml#gp_external_grant_privileges"/>
+            <topicref href="guc-list.xml#gp_external_max_segs"/>
+            <topicref href="guc-list.xml#gp_filerep_tcp_keepalives_count"/>
+            <topicref href="guc-list.xml#gp_filerep_tcp_keepalives_idle"/>
+            <topicref href="guc-list.xml#gp_filerep_tcp_keepalives_interval"/>
+            <topicref href="guc-list.xml#gp_fts_probe_interval"/>
+            <topicref href="guc-list.xml#gp_fts_probe_retries"/>
+            <topicref href="guc-list.xml#gp_fts_probe_threadcount"/>
+            <topicref href="guc-list.xml#gp_fts_probe_timeout"/>
+            <topicref href="guc-list.xml#gp_gpperfmon_send_interval"/>
+            <topicref href="guc-list.xml#gpperfmon_log_alert_level"/>
+            <topicref href="guc-list.xml#gp_hadoop_home"/>
+            <topicref href="guc-list.xml#gp_hadoop_target_version"/>
+            <topicref href="guc-list.xml#gp_hashjoin_tuples_per_bucket"/>
+            <topicref href="guc-list.xml#gp_idf_deduplicate"/>
+            <topicref href="guc-list.xml#topic_lvm_ttc_3p"/>
+            <topicref href="guc-list.xml#gp_interconnect_fc_method"/>
+            <topicref href="guc-list.xml#gp_interconnect_hash_multiplier"/>
+            <topicref href="guc-list.xml#gp_interconnect_queue_depth"/>
+            <topicref href="guc-list.xml#gp_interconnect_setup_timeout"/>
+            <topicref href="guc-list.xml#gp_interconnect_snd_queue_depth"/>
+            <topicref href="guc-list.xml#gp_interconnect_type"/>
+            <topicref href="guc-list.xml#gp_log_format"/>
+            <topicref href="guc-list.xml#gp_log_fts"/>
+            <topicref href="guc-list.xml#gp_max_csv_line_length"/>
+            <topicref href="guc-list.xml#gp_max_databases"/>
+            <topicref href="guc-list.xml#gp_max_filespaces"/>
+            <topicref href="guc-list.xml#gp_max_local_distributed_cache"/>
+            <topicref href="guc-list.xml#gp_max_packet_size"/>
+            <topicref href="guc-list.xml#gp_max_plan_size"/>
+            <topicref href="guc-list.xml#gp_max_tablespaces"/>
+            <topicref href="guc-list.xml#gp_motion_cost_per_row"/>
+            <topicref href="guc-list.xml#gp_num_contents_in_cluster"/>
+            <topicref href="guc-list.xml#gp_reject_percent_threshold"/>
+            <topicref href="guc-list.xml#gp_reraise_signal"/>
+            <topicref href="guc-list.xml#gp_resqueue_memory_policy"/>
+            <topicref href="guc-list.xml#gp_resqueue_priority"/>
+            <topicref href="guc-list.xml#gp_resqueue_priority_cpucores_per_segment"/>
+            <topicref href="guc-list.xml#gp_resqueue_priority_sweeper_interval"/>
+            <topicref href="guc-list.xml#gp_role"/>
+            <topicref href="guc-list.xml#gp_safefswritesize"/>
+            <topicref href="guc-list.xml#gp_segment_connect_timeout"/>
+            <topicref href="guc-list.xml#gp_segments_for_planner"/>
+            <topicref href="guc-list.xml#gp_server_version"/>
+            <topicref href="guc-list.xml#gp_server_version_num"/>
+            <topicref href="guc-list.xml#gp_session_id"/>
+            <topicref href="guc-list.xml#gp_set_proc_affinity"/>
+            <topicref href="guc-list.xml#gp_set_read_only"/>
+            <topicref href="guc-list.xml#gp_snmp_community"/>
+            <topicref href="guc-list.xml#gp_snmp_monitor_address"/>
+            <topicref href="guc-list.xml#gp_snmp_use_inform_or_trap"/>
+            <topicref href="guc-list.xml#gp_statistics_pullup_from_child_partition"/>
+            <topicref href="guc-list.xml#gp_statistics_use_fkeys"/>
+            <topicref href="guc-list.xml#gp_vmem_idle_resource_timeout"/>
+            <topicref href="guc-list.xml#gp_vmem_protect_limit"/>
+            <topicref href="guc-list.xml#gp_vmem_protect_segworker_cache_limit"/>
+            <topicref href="guc-list.xml#gp_workfile_checksumming"/>
+            <topicref href="guc-list.xml#gp_workfile_compress_algorithm"/>
+            <topicref href="guc-list.xml#gp_workfile_limit_files_per_query"/>
+            <topicref href="guc-list.xml#gp_workfile_limit_per_query"/>
+            <topicref href="guc-list.xml#gp_workfile_limit_per_segment"/>
+            <topicref href="guc-list.xml#gpperfmon_port"/>
+            <topicref href="guc-list.xml#integer_datetimes"/>
+            <topicref href="guc-list.xml#IntervalStyle"/>
+            <topicref href="guc-list.xml#join_collapse_limit"/>
+            <topicref href="guc-list.xml#keep_wal_segments"/>
+            <topicref href="guc-list.xml#krb_caseins_users"/>
+            <topicref href="guc-list.xml#krb_server_keyfile"/>
+            <topicref href="guc-list.xml#krb_srvname"/>
+            <topicref href="guc-list.xml#lc_collate"/>
+            <topicref href="guc-list.xml#lc_ctype"/>
+            <topicref href="guc-list.xml#lc_messages"/>
+            <topicref href="guc-list.xml#lc_monetary"/>
+            <topicref href="guc-list.xml#lc_numeric"/>
+            <topicref href="guc-list.xml#lc_time"/>
+            <topicref href="guc-list.xml#listen_addresses"/>
+            <topicref href="guc-list.xml#local_preload_libraries"/>
+            <topicref href="guc-list.xml#log_autostats"/>
+            <topicref href="guc-list.xml#log_connections"/>
+            <topicref href="guc-list.xml#log_disconnections"/>
+            <topicref href="guc-list.xml#log_dispatch_stats"/>
+            <topicref href="guc-list.xml#log_duration"/>
+            <topicref href="guc-list.xml#log_error_verbosity"/>
+            <topicref href="guc-list.xml#log_executor_stats"/>
+            <topicref href="guc-list.xml#log_hostname"/>
+            <topicref href="guc-list.xml#log_min_duration_statement"/>
+            <topicref href="guc-list.xml#log_min_error_statement"/>
+            <topicref href="guc-list.xml#log_min_messages"/>
+            <topicref href="guc-list.xml#log_parser_stats"/>
+            <topicref href="guc-list.xml#log_planner_stats"/>
+            <topicref href="guc-list.xml#log_rotation_age"/>
+            <topicref href="guc-list.xml#log_rotation_size"/>
+            <topicref href="guc-list.xml#log_statement"/>
+            <topicref href="guc-list.xml#log_statement_stats"/>
+            <topicref href="guc-list.xml#log_timezone"/>
+            <topicref href="guc-list.xml#log_truncate_on_rotation"/>
+            <topicref href="guc-list.xml#max_appendonly_tables"/>
+            <topicref href="guc-list.xml#max_connections"/>
+            <topicref href="guc-list.xml#max_files_per_process"/>
+            <topicref href="guc-list.xml#max_fsm_pages"/>
+            <topicref href="guc-list.xml#max_fsm_relations"/>
+            <topicref href="guc-list.xml#max_function_args"/>
+            <topicref href="guc-list.xml#max_identifier_length"/>
+            <topicref href="guc-list.xml#max_index_keys"/>
+            <topicref href="guc-list.xml#max_locks_per_transaction"/>
+            <topicref href="guc-list.xml#max_prepared_transactions"/>
+            <topicref href="guc-list.xml#max_resource_portals_per_transaction"/>
+            <topicref href="guc-list.xml#max_resource_queues"/>
+            <topicref href="guc-list.xml#max_stack_depth"/>
+            <topicref href="guc-list.xml#max_statement_mem"/>
+            <topicref href="guc-list.xml#optimizer"/>
+            <topicref href="guc-list.xml#optimizer_array_expansion_threshold"/>
+            <topicref href="guc-list.xml#optimizer_analyze_root_partition"/>
+            <topicref href="guc-list.xml#optimizer_control"/>
+            <topicref href="guc-list.xml#optimizer_enable_master_only_queries"/>
+            <topicref href="guc-list.xml#optimizer_join_order_threshold"/>
+            <topicref href="guc-list.xml#optimizer_minidump"/>
+            <topicref href="guc-list.xml#optimizer_parallel_union"/>
+            <topicref href="guc-list.xml#optimizer_sort_factor"/>
+            <topicref href="guc-list.xml#password_encryption"/>
+            <topicref href="guc-list.xml#password_hash_algorithm"/>
+            <topicref href="guc-list.xml#pgcrypto.fips"/>
+            <topicref href="guc-list.xml#pgstat_track_activity_query_size"/>
+            <topicref href="guc-list.xml#pljava_classpath"/>
+            <topicref href="guc-list.xml#pljava_classpath_insecure"/>
+            <topicref href="guc-list.xml#pljava_statement_cache_size"/>
+            <topicref href="guc-list.xml#pljava_release_lingering_savepoints"/>
+            <topicref href="guc-list.xml#pljava_vmoptions"/>
+            <topicref href="guc-list.xml#port"/>
+            <topicref href="guc-list.xml#random_page_cost"/>
+            <topicref href="guc-list.xml#readable_external_table_timeout"/>
+            <topicref href="guc-list.xml#repl_catchup_within_range"/>
+            <topicref href="guc-list.xml#replication_timeout"/>
+            <topicref href="guc-list.xml#regex_flavor"/>
+            <topicref href="guc-list.xml#resource_cleanup_gangs_on_wait"/>
+            <topicref href="guc-list.xml#resource_select_only"/>
+            <topicref href="guc-list.xml#runaway_detector_activation_percent"/>
+            <topicref href="guc-list.xml#search_path"/>
+            <topicref href="guc-list.xml#seq_page_cost"/>
+            <topicref href="guc-list.xml#server_encoding"/>
+            <topicref href="guc-list.xml#server_version"/>
+            <topicref href="guc-list.xml#server_version_num"/>
+            <topicref href="guc-list.xml#shared_buffers"/>
+            <topicref href="guc-list.xml#shared_preload_libraries"/>
+            <topicref href="guc-list.xml#ssl"/>
+            <topicref href="guc-list.xml#ssl_ciphers"/>
+            <topicref href="guc-list.xml#standard_conforming_strings"/>
+            <topicref href="guc-list.xml#statement_mem"/>
+            <topicref href="guc-list.xml#statement_timeout"/>
+            <topicref href="guc-list.xml#stats_queue_level"/>
+            <topicref href="guc-list.xml#superuser_reserved_connections"/>
+            <topicref href="guc-list.xml#tcp_keepalives_count"/>
+            <topicref href="guc-list.xml#tcp_keepalives_idle"/>
+            <topicref href="guc-list.xml#tcp_keepalives_interval"/>
+            <topicref href="guc-list.xml#temp_buffers"/>
+            <topicref href="guc-list.xml#TimeZone"/>
+            <topicref href="guc-list.xml#timezone_abbreviations"/>
+            <topicref href="guc-list.xml#track_activities"/>
+            <topicref href="guc-list.xml#track_counts"/>
+            <topicref href="guc-list.xml#transaction_isolation"/>
+            <topicref href="guc-list.xml#transaction_read_only"/>
+            <topicref href="guc-list.xml#transform_null_equals"/>
+            <topicref href="guc-list.xml#unix_socket_directory"/>
+            <topicref href="guc-list.xml#unix_socket_group"/>
+            <topicref href="guc-list.xml#unix_socket_permissions"/>
+            <topicref href="guc-list.xml#update_process_title"/>
+            <topicref href="guc-list.xml#vacuum_cost_delay"/>
+            <topicref href="guc-list.xml#vacuum_cost_limit"/>
+            <topicref href="guc-list.xml#vacuum_cost_page_dirty"/>
+            <topicref href="guc-list.xml#vacuum_cost_page_hit"/>
+            <topicref href="guc-list.xml#vacuum_cost_page_miss"/>
+            <topicref href="guc-list.xml#vacuum_freeze_min_age"/>
+            <topicref href="guc-list.xml#validate_previous_free_tid"/>
+            <topicref href="guc-list.xml#vmem_process_interrupt"/>
+            <topicref href="guc-list.xml#wal_receiver_status_interval"/>
+            <topicref href="guc-list.xml#writable_external_table_bufsize"/>
+            <topicref href="guc-list.xml#xid_stop_limit"/>
+            <topicref href="guc-list.xml#xid_warn_limit"/>
+        </topicref>
     </topicref>
 </map>
