--- a/gpdb-doc/dita/ref_guide/ref_guide.ditamap
+++ b/gpdb-doc/dita/ref_guide/ref_guide.ditamap
@@ -169,6 +169,7 @@
 				<topicref href="system_catalogs/pg_database.xml"/>
 				<topicref href="system_catalogs/pg_depend.xml"/>
 				<topicref href="system_catalogs/pg_description.xml"/>
+        <topicref href="system_catalogs/pg_enum.xml"/>
 				<topicref href="system_catalogs/pg_exttable.xml"/>
 				<topicref href="system_catalogs/pg_filespace.xml"/>
 				<topicref href="system_catalogs/pg_filespace_entry.xml"/>
