removing prefaces from individual bookmaps; adding map redirect for pivotal site

--- a/gpdb-doc/dita/admin_guide/admin_guide.ditamap
+++ b/gpdb-doc/dita/admin_guide/admin_guide.ditamap
@@ -52,4 +52,5 @@
                 id="perf_troubleshoot"/>
         </topicref>
     </topicref>
+    <topicref href="../../index.html" scope="external" navtitle="Greenplum Database Docs Home" format="html" otherprops="pivotal"/>
 </map>
